--- a/src/components/UI/UiBox/UiBox.module.scss
+++ b/src/components/UI/UiBox/UiBox.module.scss
@@ -1,6 +1,5 @@
 .box {
-  max-width: 520px;
-  width: 100%;
+  min-width: 520px;
   box-shadow: 0px 0px 10px gray;
   padding: 10px;
   border-radius: 5px;
