--- a/src/pages/Main.module.scss
+++ b/src/pages/Main.module.scss
@@ -11,7 +11,7 @@
 
   & .contnet {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: start;
     padding: 20px;
   }
